Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
     }
    ],
    "source": [
-    "for index in range(countries):\n",
+    "for index in range(len(countries):\n",
     "    print(index)\n",
     "    print(countries[index])"
    ]
