Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "dict_items"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
    ],
    "source": [
     "for key, value in example_dictionary.items():\n",
-    "    print(\"this is the key:\", key)    \n",
+    "    print(key)    \n",
     "    print(\"this is the value:\", value, \"\\n\")"
    ]
   },
