--- a/index.ipynb
+++ b/index.ipynb
@@ -567,29 +567,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is the key: first_name\n",
-      "this is the value: Terrance \n",
-      "\n",
-      "this is the key: last_name\n",
-      "this is the value: KOAR \n",
-      "\n",
-      "this is the key: favorite_language\n",
-      "this is the value: Python \n",
-      "\n"
+      "first_name\n",
+      "Terrance\n",
+      "last_name\n",
+      "KOAR\n",
+      "favorite_language\n",
+      "Python\n"
      ]
     }
    ],
    "source": [
     "for key, value in example_dictionary.items():\n",
     "    print(key)    \n",
-    "    print(\"this is the value:\", value, \"\\n\")"
+    "    print(value)"
    ]
   },
   {
